# MCPServers

./: .gitignore  README.md
BuildMCP/: README.md
CloudAuthMCP/: README.md
CloudAuthMCP/todos-api/: .prettierrc  README.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
CloudAuthMCP/todos-api/src/: index.ts
CloudAuthMCP/todos-api/src/middlewares/: jwt.ts
CloudAuthMCP/todos-api/src/types/: hono.ts
CloudAuthMCP/todos-api/src/utils/: http-exception.ts
CloudAuthMCP/todos-api/test/: CheckMe.sh  DeployedCheckMe.sh  MakeTokenRequest.sh
PlaywrightMCP/: README.md
QuickStart/: README.md
QuickStart/quickstart-resources/mcp-client-typescript/: package-lock.json
QuickStart/quickstart-resources/weather-server-typescript/: package.json
SSEServer/: .env  README.md  client.py  main.py  pyproject.toml
SSEServer/servers/: __init__.py  weather_server.py
quickstart-resources/: .gitignore
quickstart-resources/mcp-client-python/: client.py  pyproject.toml
quickstart-resources/weather-server-python/: pyproject.toml
quickstart-resources/weather-server-typescript/: package-lock.json
shellserver/: Compose.yml  Dockerfile  README.md  build.sh  pyproject.toml  run.sh  server.py
shellserver/DisableExtensions/: disable_extensions.bat  disable_extensions.ps1  disable_extensions.py
shellserver/prompts/: implement-mcp.prompt
